--- a/erp/build.gradle
+++ b/erp/build.gradle
@@ -33,7 +33,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
@@ -50,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-//room
+    //room
     implementation 'androidx.room:room-runtime:2.4.1'
     kapt 'androidx.room:room-compiler:2.4.1'
     implementation 'androidx.room:room-ktx:2.4.1'
@@ -105,4 +105,17 @@ dependencies {
 
     //spinner
     implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
+
+    //material navigation drawer
+    implementation "com.mikepenz:materialdrawer:8.4.5"
+
+    //required support lib modules
+    implementation "androidx.annotation:annotation:1.3.0"
+    implementation "com.google.android.material:material:1.6.0-alpha01" // requires at least 1.5.0-x
+
+    // Add for NavController support
+    implementation "com.mikepenz:materialdrawer-nav:8.4.5"
+
+    // Add for Android-Iconics support
+    implementation "com.mikepenz:materialdrawer-iconics:8.4.5"
 }
