--- a/erp/build.gradle
+++ b/erp/build.gradle
@@ -111,11 +111,15 @@ dependencies {
 
     //required support lib modules
     implementation "androidx.annotation:annotation:1.3.0"
-    implementation "com.google.android.material:material:1.6.0-alpha01" // requires at least 1.5.0-x
+    implementation "com.google.android.material:material:1.6.0-alpha02" // requires at least 1.5.0-x
 
     // Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:8.4.5"
 
     // Add for Android-Iconics support
     implementation "com.mikepenz:materialdrawer-iconics:8.4.5"
+    implementation "com.mikepenz:google-material-typeface:4.0.0.2-kotlin@aar"
+
+    //lottie
+    implementation "com.airbnb.android:lottie:4.2.2"
 }
