--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DHT">
+        <activity android:name=".auth.LoginActivity" />
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
