--- a/erp/build.gradle
+++ b/erp/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
-
 }
 
 android {
@@ -47,7 +46,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -55,7 +53,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.1'
     kapt 'androidx.room:room-compiler:2.4.1'
     implementation 'androidx.room:room-ktx:2.4.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
@@ -109,18 +107,15 @@ dependencies {
 
     //material navigation drawer
     implementation "com.mikepenz:materialdrawer:8.4.5"
-
     //required support lib modules
     implementation "androidx.annotation:annotation:1.3.0"
     implementation "com.google.android.material:material:1.6.0-alpha02" // requires at least 1.5.0-x
-
+    implementation "com.mikepenz:aboutlibraries:10.0.0-b07@aar"
     // Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:8.4.5"
-
-    // Add for Android-Iconics support
+    // Add for Android-Iconic support
     implementation "com.mikepenz:materialdrawer-iconics:8.4.5"
     implementation "com.mikepenz:google-material-typeface:4.0.0.2-kotlin@aar"
+    implementation 'com.mikepenz:fontawesome-typeface:5.13.3.0-kotlin@aar'
 
-    //lottie
-    implementation "com.airbnb.android:lottie:4.2.2"
 }
