--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DHT">
         <activity
-            android:name=".admin.AdminChangePassActivity"
+            android:name=".admin.EditProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.ChangePassActivity"
             android:exported="false" />
         <activity
             android:name=".admin.AdminActivity"
