--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DHT">
         <activity
+            android:name=".master_design.product.ProductActivity"
+            android:exported="false" />
+        <activity
             android:name=".master_design.supplier.SupplierActivity"
             android:exported="false" />
         <activity
