--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DHT">
         <activity
+            android:name=".dht.packing.PackingScannerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dht.packing.PackingActivity"
+            android:exported="false" />
+        <activity
             android:name=".dht.sales_contract.SalesContractActivity"
             android:exported="false" />
         <activity
