--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DHT">
         <activity
+            android:name=".dht.work_order.BreakdownActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dht.work_order.WorkOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".dht.department.DepartmentActivity"
             android:exported="false" />
         <activity
