feat: purchasing order [not yet finished]

--- a/erp/src/main/AndroidManifest.xml
+++ b/erp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jaylangkung.dht">
+    package="com.jaylangkung.dht" >
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -21,7 +21,10 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DHT">
+        android:theme="@style/Theme.DHT" >
+        <activity
+            android:name=".dht.purchasing.PurchasingActivity"
+            android:exported="false" />
         <activity
             android:name=".dht.work_order.BreakdownActivity"
             android:exported="false" />
@@ -84,7 +87,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
